48
================

18/08/23 Show timeline on mobile UI home screen #1096

47
================

17/08/23 Handle nulls in name fields when constructing OwnerName
16/08/23 Smartphone UI tweaks #1096
16/08/23 Use 2FA buttons and validate user has set up TOTP before enabling #1318
16/08/23 Do not send password reset emails for disabled user accounts
16/08/23 Fix report param extraction so it doesn't fail with incomplete tokens
16/08/23 Fix Mailmerge->Send Email to respond to email tokens #1088
15/08/23 Fix move_adopt so animal or person can be chosen in any order
14/08/23 Stock take ported to new smartphone UI #1096
14/08/23 Additional fields: Merge separate columns into a single options column
14/08/23 Perform homecheck in new smartphone UI #1096
14/08/23 Check license and complete diary support for new smartphone UI #1096
13/08/23 Fix bug with extract_email_tokens being fed bytes
12/08/23 move_adopt: validate checkout/paperwork values at server side
11/08/23 Add log support to people in new mobile interface #950
11/08/23 Use same scheme with 2m cache for splash/logo.jpg
11/08/23 Fix bug where saving an appointment reset the amount to $0
10/08/23 Do not show checkout under Move->Adopt for animals with no fee
10/08/23 Allow RescueGroups to be published to more frequently than 24 hours
09/08/23 Add {{CC}} and {{BCC}} email tokens #1088
09/08/23 {{SUBJECT}} and {{FROM}} email tokens in template support #1088
09/08/23 Option to enable thumbnails in clinic screens #1259
09/08/23 Advanced find animal: Seach on diet #1313
09/08/23 Advanced find animal: Search on jurisdiction #1267
09/08/23 Allow paperwork generation to be disabled #1316
07/08/23 Allow additional fields to be hidden #598
07/08/23 Low stock level alerts #954
06/08/23 Merge person on email/cell checks first name field to avoid false positives
05/08/23 Hide the CSV import delete database option for large databases
05/08/23 Fix bug where reserves with move date but no animal could NPE during validation